--- a/technical_documentation_page/style.css
+++ b/technical_documentation_page/style.css
@@ -14,7 +14,7 @@ body {
     height: 100vh;
     position: fixed;
     background-color: rgb(82, 82, 255);
-    width: 50%;
+    width: 400px;
 }
 
 #navbar header {
@@ -93,9 +93,15 @@ body {
         width: 100vw;
         height: 60px;
         display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 20px;
         /* overflow: auto; */
     }
 
+    #navbar header {
+        padding: 0;
+    }
     #nav-bar-button {
         width: 40px;
         height: 30px;
@@ -116,24 +122,22 @@ body {
         flex-direction: column;
         position: absolute;
         top: 60px;
-        width: 100%; 
-        background: rgb(62, 62, 255);
+        background: rgb(98, 98, 255);
         z-index: 1;
         left: 0;
-        height: 200px;
-        /* height: 100px; */
-        /* display: none; */
+        margin: 20px;
+        border-radius: 10px;
+        display: none;
     }
 
-    #navbar ul li  {
-        background: rgb(82, 82, 255);
+    #navbar ul.active {
+        display: block;
+        opacity: 1;
     }
 
     #main-doc {
         width: 100%;
-        margin: 0;
-        display: none;
+        margin: 60px 0 0;
     }
 
 }
-
